create the env file

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "firebase": "^11.0.2",
     "lucide-react": "^0.460.0",
     "modern-bank-app": "file:",
